# GErr

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/defineerr/: main.cpp  myapi.hpp
examples/simpleerr/: main.cpp
examples/simpletry/: main.cpp  try.hpp
include/gerr/: gerr.hpp
